--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contest",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://manankarnik.github.io/contest",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
